# etcGEMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: defaults.yaml
configs/examples/: example_gecko.yaml  toy.yaml
configs/experiments/: calibrated_quick.yaml  control_quick.yaml  decomposition_quick.yaml  decomposition_recast.yaml  decomposition_sectors.yaml  dltkcat_ext.yaml  elasticity.yaml
docs/: RESTRUCTURE_PROPOSAL.md  RUNBOOK.md
experiments/: calibrated.yaml  control.yaml  decomposition.yaml  decomposition_sectors.yaml  default.yaml  dltkcat_ext.yaml  elasticity.yaml  quick.yaml  sectors.yaml
key_refs/: MICROADAPT_ExperimentalScope NS.docx
outputs/toy_run/: curves.npy  (+3 more)
prompts/: P2c_ceiling_diagnostic_prompt.md  P3_tuned_model_analyses_and_report_prompt.md  README.md  align_with_mres_unfolding_model_prompt.md  bayesian_calibration_noll_minimal_prompt.md  bayesian_calibration_phase0_1_prompt.md  decomposition_prompt.md  dltkcat_sweep_prompt.md  fixes_identifiability_ea_sectordecomp_prompt.md  ingest_temperature_proteomics_prompt.md  native_figures_and_runs_prompt.md  project_restructure_prompt.md  readme_major_rewrite_prompt.md  repo_restructure_prompt.md  report_addendum_structural_caveat_prompt.md  report_clarity_single_operating_point_prompt.md  report_fix_control_figure_table_consistency_prompt.md  report_model_anatomy_and_global_knobs_prompt.md
refs/: MICROADAPT_ExperimentalScope.docx
scripts/: push_updates.sh
tpc_pipeline/: README.md  RUNBOOK.md  dltkcat_input.csv  dltkcat_input_ext.csv  fits.csv  run_with_fits.py
(+310 files in other folders)
