[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "etcgem"
version = "0.1.0"
description = "Enzyme- and temperature-constrained GEM thermal-performance sensitivity analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cobra>=0.29",
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "pyyaml>=6.0",
]

[project.scripts]
etcgem = "etcgem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
